# hydrant

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  build_dataset.sh  camera.json  config.json  imgui.ini  infer_dimension.pl  renderer.json
cmake/Modules/: FindCUDA.cmake
configs/: blocks.json  isosurface.json  paging.json  volume.json
include/: buffer3d.hpp  glm_math.hpp  texture3d.hpp  texture_adapter.hpp  thumbnail.hpp
include/glad/: glad.h
include/hydrant/: application.hpp  basic_renderer.hpp  basic_renderer.schema.hpp  buffer3d.hpp  config.schema.hpp  const_texture_3d.hpp  cpu_sampler.hpp  cuda_image.hpp  dataset.hpp  dbuf_renderer.hpp  double_buffering.hpp  dyn_kd_tree.hpp  glfw_render_loop.hpp  glm_math.hpp  mpi_command.hpp  mpi_utils.hpp  octree_culler.hpp  pixel_template.hpp  raycaster.hpp  renderer.hpp  rt_block_paging.hpp  sampler.hpp  scene.hpp  shader.hpp  texture_adapter.hpp  transfer_fn.hpp  transfer_fn.schema.hpp  transfer_fn_widget.hpp  ui.hpp  unarchive_pipeline.hpp  unarchiver.hpp
include/hydrant/bridge/: buffer3d.hpp  buffer_3d.hpp  const_texture_3d.hpp  cpu_sampler.hpp  image.hpp  sampler.hpp  texture_1d.hpp  texture_3d.hpp
include/hydrant/core/: glm_math.hpp  raycaster.hpp  render_loop.hpp  renderer.hpp  renderer.schema.hpp  sampler.hpp  scene.hpp  scene.schema.hpp  shader.hpp  shader.schema.hpp
include/hydrant/paging/: block_paging.hpp  lossless_block_paging.hpp  rt_block_paging.hpp  unarchive_pipeline.hpp
mods/: CMakeLists.txt
mods/blocks/: CMakeLists.txt  blocks_shader.cu  blocks_shader.hpp
mods/isosurface/: CMakeLists.txt  isosurface_shader.hpp
mods/paging/: CMakeLists.txt  paging.cc  paging_shader.hpp
mods/volume/: CMakeLists.txt  volume_shader.cu
src/: CMakeLists.txt  application.cc  deb_glfw_render_loop.hpp  double_buffering.cc  glad.c  hydrant.cc  local_render_loop.hpp  main.cc  main.cu  raycaster.hpp  renderer.cc  rt_block_paging.cc  shader.cu  ui.cc  unarchive_pipeline.cc
src/client/: CMakeLists.txt  client.cc  client.hpp  isosurface.ui.cc  main.cc  transfer_fn_widget.cc  ui.cc  volume.ui.cc
src/core/: cpu_shading.cc  cuda_shading.cu  renderer.cc  scene.cc  shader.cc
src/engine/: CMakeLists.txt
src/engine/core/: cpu_shading.cc  renderer.cc  scene.cc
src/engine/paging/: lossless_block_paging.cc  unarchive_pipeline.cc
src/gui/: CMakeLists.txt  glad.c  ui.cc
src/hydrant/: CMakeLists.txt  main.cc  main.cu  math.hpp  raycaster.cu  raycaster.hpp  scene.hpp  shader.cu  shader.hpp
src/hydrant/shaders/: chebyshev_shader.hpp  scratch.cu  scratch.hpp  volume_shader.cu  volume_shader.hpp
src/local/: CMakeLists.txt  application.cc  application.hpp  local.cc  ui.hpp
src/paging/: lossless_block_paging.cc  rt_block_paging.cc  unarchive_pipeline.cc
src/renderers/: CMakeLists.txt
src/renderers/blocks/: blocks.cc  blocks.hpp  blocks.ui.cc  blocks_shader.cu  blocks_shader.hpp
src/renderers/isosurface/: isosurface.cc  isosurface.hpp  isosurface.ui.cc  isosurface_shader.cu  isosurface_shader.hpp  isosurface_ui.cc
src/renderers/paging/: paging.cc  paging.hpp  paging_shader.cu  paging_shader.hpp
src/renderers/volume/: volume.cc  volume.hpp  volume.ui.cc  volume_shader.cu  volume_shader.hpp
src/server/: CMakeLists.txt  application.cc  double_buffering.cc  main.cc  server.cc  server.hpp
src/server/core/: cuda_shading.cu
src/server/renderers/isosurface/: isosurface_shader.cu
src/server/renderers/paging/: paging.schema.hpp
src/server/renderers/volume/: volume.cc
src/shaders/: volume_shader.hpp
src/slave/: CMakeLists.txt  double_buffering.cc  main.cc  slave.cc  slave.hpp
src/slave/core/: cpu_shading.cc  cuda_shading.cu
src/slave/paging/: lossless_block_paging.cc  rt_block_paging.cc  unarchive_pipeline.cc
src/slave/renderers/blocks/: blocks.cc  blocks_shader.hpp
src/slave/renderers/isosurface/: isosurface.cc  isosurface_shader.cu  isosurface_shader.hpp
src/slave/renderers/paging/: paging.cc  paging_shader.cu  paging_shader.hpp
src/slave/renderers/volume/: #volume.cc#  .#volume.cc  volume.cc  volume_shader.cu  volume_shader.hpp
src/slave/voxer/: Image.cpp  Image.hpp
src/thumbnailer/: CMakeLists.txt  main.cc
src/zk/: CMakeLists.txt  launch_server.sh  zookeeper.cc
src/zookeeper/: CMakeLists.txt  launch_server.sh  main.cc  zookeeper.cc  zookeeper.hpp
ui/: blocks.schema.hpp  isosurface.schema.hpp  volume.schema.hpp
